--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,7 +12,6 @@ body.no-animate *::after {
 html {
     font-size: 62.5%;
     font-family: Muli, Roboto, Helvetica Neue, Arial, sans-serif;
-    background-color: #121212;
 }
 
 body {
@@ -107,10 +106,10 @@ input:-webkit-autofill {
     -webkit-box-shadow:0 0 0 100px transparent inset!important;
 }
 
-@import 'print.css';
+/* @import 'print.css';
 
 @import 'tables.css';
 
 @import 'prism.css';
 
-@import 'tailwind.css';
+@import 'tailwind.css'; */
